--- a/app/Resources/views/calendrier.html.twig
+++ b/app/Resources/views/calendrier.html.twig
@@ -30,6 +30,7 @@
                 var myNewEvent = {
                     title: $(this).find('.nom').text(),
                     description: $(this).find('.description').html(),
+                    lien: $(this).find('.lien').html(),
                     start: new Date(dateDarray.year, dateDarray.month, dateDarray.day, dateDarray.hour, dateDarray.minute)
                 };
 
@@ -89,6 +90,9 @@
                 eventMouseout: function(calEvent, jsEvent) {
                     $(this).css('z-index', 8);
                     $('.tooltipevent').remove();
+                },
+                eventClick: function(calEvent, jsEvent, view) {
+                    //window.location.href = window.location.href.replace( 'calendrier', calEvent.lien );
                 }
 
 
@@ -119,6 +123,11 @@
                         </div>
                         <div class="nom">{{ event.evt.nom }}</div>
                         <div class="description">{{ event.evt.description | raw }}</div>
+                        {% if event.type == "discEvt" %}
+                            <div class="lien">myCourses/{{ event.evt.discipline.id }}</div>
+                        {% else %}
+                            <div class="lien">myCourses/test</div>
+                        {% endif %}
                     </div>
                 {% endfor %}
             </div>
