--- a/app/Resources/views/documents/docArrays.html.twig
+++ b/app/Resources/views/documents/docArrays.html.twig
@@ -6,7 +6,7 @@
             $('.descriptionPPline').remove();
             $('.infoDocActived').removeClass('infoDocActived');
         });
-        $('th[data-column="2"]').click();
+        $('th[data-typeCol="dateDepot"]').click();
     });
 </script>
 <div class="container">
