--- a/web/css/stdi_style.css
+++ b/web/css/stdi_style.css
@@ -551,3 +551,9 @@ textarea[readonly]{
 .btnSendMsg{
     font-size: 20px;
 }
+.newMsgsPuce {
+    position: absolute;
+    z-index: 9;
+    top: 5px;
+    right: 10px;
+}
